--- a/homeworks/HW2/task2/build.gradle
+++ b/homeworks/HW2/task2/build.gradle
@@ -26,6 +26,6 @@ dependencies {
 checkstyle {
     ignoreFailures = true
     toolVersion = '7.5'
-    configFile = new File('../../config/checkstyle/checkstyle.xml')
+    configFile = new File('../../../config/checkstyle/checkstyle.xml')
 }
 
